# sdjournal-rs

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: my_benchmark.rs
journalctl/: Cargo.toml
journalctl/src/: bin.rs
sdjournal/: Cargo.toml
sdjournal/benches/: my_benchmark.rs
sdjournal/src/: bin.rs  ffi.rs  hash.rs  iter.rs  journal.rs  lib.rs  traits.rs
sdjournal/tests/: test.rs
src/: .journal.rs.swp  .main.rs.swp  bin.rs  hash.rs  journal.rs  lib.rs  lookup3.c  lookup3.h  macro.h  main.rs  traits.rs
tests/: test.rs
