[package]
name = "journald-rust"
version = "0.1.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

[lib]
name = "journald"
path = "src/lib.rs"

[[bin]]
name = "journalctl-rs"
path = "src/bin.rs"

[dependencies]
byteorder = "1.3.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
