[package]
name = "journalctl-rust"
version = "0.2.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "journald"
path = "src/lib.rs"

[[bin]]
name = "journalctl-rs"
path = "src/bin.rs"

[dependencies]
byteorder = "1.3.1"
memmap = "0.7.0"
libc = "0.2.49"
chrono = "0.4.7"
clap = "2.33.0"

[dev-dependencies]
criterion = "0.2"
lazy_static = "1.3.0"
pretty_assertions = "0.6.1"

[[bench]]
name = "my_benchmark"
harness = false

[build-dependencies]
cc = "1.0"
