[package]
name = "journalctl-rust"
version = "0.2.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

[[bin]]
name = "journalctl-rs"
path = "src/bin.rs"

[dependencies]
byteorder = "1.3.1"
libc = "0.2.49"
chrono = "0.4.7"
clap = "2.33.0"
sdjournal = { path = "../sdjournal" }
