[package]
name = "sdjournal"
version = "0.2.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

[lib]
name = "sdjournal"
path = "src/lib.rs"

[dependencies]
byteorder = "1.3.1"
memmap = "0.7.0"
libc = "0.2.49"

[dev-dependencies]
criterion = "0.2"
lazy_static = "1.3.0"
pretty_assertions = "0.6.1"

[[bench]]
name = "my_benchmark"
harness = false
